[tool.poetry]
name = "marketing_posts"
version = "0.1.0"
description = "marketing_posts-content using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.40.1" }
crewai-tools = "^0.4.6"

[tool.poetry.scripts]
marketing_posts = "marketing_posts.main:run"
train = "marketing_posts.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
